# usernode-circuits

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
artifacts/: manifest.json  utxo_merge.abi.json  utxo_merge.acir  utxo_merge.vk  utxo_spend.abi.json  utxo_spend.acir  utxo_spend.vk
docs/: DEVELOPMENT.md
noir/: README.md
noir/utxo_merge/: Nargo.toml
noir/utxo_merge/src/: main.nr
noir/utxo_spend/: Nargo.toml
noir/utxo_spend/src/: main.nr
scripts/: nargo_to_artifacts.py  regen_artifacts.sh
src/: artifacts.rs  barretenberg.rs  batch.rs  bn254.rs  catalog.rs  field.rs  keys.rs  lib.rs  poseidon2.rs  prover.rs  tx.rs  types.rs
tests/: api_batch.rs  api_merge.rs  api_spend.rs  batch_merge.rs  catalog.rs  catalog_metadata.rs  utxo_merge.rs  utxo_merge_negative.rs  utxo_spend.rs  utxo_spend_negative.rs
tests/common/: mod.rs
