[package]
name = "usernode-circuits"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Embedded Noir circuits and proving helpers for the Usernode stack"

[lib]
name = "usernode_circuits"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
acir-field = { package = "acir_field", git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11" }
acir = { package = "acir", git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11" }
acvm = { package = "acvm", git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11" }
binprot = { git = "https://github.com/Usernode-Labs/binprot-rs", rev = "400b52c" }
bincode = "1"
dirs = "5"
flate2 = "1"
aztec-barretenberg-rs = { git = "https://github.com/Usernode-Labs/aztec-packages", tag = "bb-v0.1.2", package = "aztec-barretenberg-rs" }
aztec-barretenberg-sys-rs = { git = "https://github.com/Usernode-Labs/aztec-packages", tag = "bb-v0.1.2", package = "aztec-barretenberg-sys-rs" }
rand = "0.8"
array-init = "2"

[dev-dependencies]
proptest = "1"
hex = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
arithmetic_side_effects = "warn"
indexing_slicing = "warn"
